--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-paginate": "^6.3.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
@@ -15,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "now-build": "react-scripts build"
-
   },
   "eslintConfig": {
     "extends": "react-app"
