--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
+    "firebase": "^6.0.2",
     "logrocket": "^0.6.21",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
