--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dexie": "^2.0.4",
     "firebase": "^6.0.2",
     "logrocket": "^0.6.21",
+    "mobx": "^5.9.4",
+    "mobx-react-lite": "^1.3.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
