--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ REACT_APP_PROJECT_ID=reddex-b74cf
 REACT_APP_STORAGE_BUCKET=reddex-b74cf.appspot.com
 REACT_APP_MESSAGING_SENDER_ID=237981036796
 REACT_APP_APP_ID=1:237981036796:web:085580413b4641fa"
+REACT_APP_REDDIT_APP_NAME=Rw_vFfmZPN4uYA
+REACT_APP_REDDIT_APP_SECRET=jAYipKjCtapoT1mWGdi65FnSioY
+REACT_APP_REDDIT_REDIRECT=http://localhost:3000
