can successfully send messages via reddit api

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ REACT_APP_APP_ID=1:237981036796:web:085580413b4641fa"
 REACT_APP_REDDIT_APP_NAME=Rw_vFfmZPN4uYA
 REACT_APP_REDDIT_APP_SECRET=jAYipKjCtapoT1mWGdi65FnSioY
 REACT_APP_REDDIT_REDIRECT=http://localhost:3000
+REACT_APP_RECAPTCHA_KEY=6LfHyKYUAAAAAIsczSvbxgfNvgDs2QHDtiPWjADE
+REACT_APP_RECAPTCHA_SECRET=6LfHyKYUAAAAAEGHGYpIlcKT6qIoAZ3gNRqCMigO
