--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
     "firebase": "^6.0.2",
@@ -14,6 +14,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^1.0.5",
     "react-paginate": "^6.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
