--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
+    "enzyme-adapter-react-16": "^1.14.0",
     "firebase": "^6.0.2",
     "logrocket": "^0.6.21",
     "mobx": "^5.9.4",
@@ -42,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "fake-indexeddb": "^2.1.1",
+    "react-hooks-testing-library": "^0.5.1",
     "react-testing-library": "^7.0.1"
   }
 }
