--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "enzyme": "^3.10.0",
     "fake-indexeddb": "^2.1.1",
     "react-hooks-testing-library": "^0.5.1",
-    "react-testing-library": "^7.0.1"
+    "react-testing-library": "^7.0.1",
+    "sinon": "^7.3.2"
   }
 }
