--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
+    "downshift": "^3.2.10",
     "enzyme-adapter-react-16": "^1.14.0",
     "firebase": "^6.0.2",
     "logrocket": "^0.6.21",
