--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dexie": "^2.0.4",
     "downshift": "^3.2.10",
     "enzyme-adapter-react-16": "^1.14.0",
-    "firebase": "^6.0.2",
     "logrocket": "^0.6.21",
     "mobx": "^5.9.4",
+    "mobx-react": "^6.1.1",
     "mobx-react-lite": "^1.3.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
