--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
-    "downshift": "^3.2.10",
+    "downshift": "^3.2.12",
     "enzyme-adapter-react-16": "^1.14.0",
+    "filepond": "^4.5.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
     "logrocket": "^0.6.21",
-    "mobx": "^5.11.0",
-    "mobx-react": "^6.1.1",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-google-recaptcha": "^1.0.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-filepond": "^7.0.1",
+    "react-google-recaptcha": "^1.1.0",
     "react-paginate": "^6.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
-    "react-toastify": "^5.3.1"
+    "react-toastify": "^5.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +53,6 @@
     "fake-indexeddb": "^2.1.1",
     "react-hooks-testing-library": "^0.5.1",
     "react-testing-library": "^7.0.1",
-    "sinon": "^7.3.2"
+    "sinon": "^7.4.1"
   }
 }
