--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "downshift": "^3.2.12",
     "enzyme-adapter-react-16": "^1.14.0",
     "filepond": "^4.5.1",
+    "filepond-plugin-file-encode": "^2.1.4",
+    "filepond-plugin-file-validate-type": "^1.2.4",
+    "filepond-plugin-image-crop": "^2.0.3",
     "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.4.0",
+    "filepond-plugin-image-resize": "^2.0.4",
+    "filepond-plugin-image-transform": "^3.4.3",
     "logrocket": "^0.6.21",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
