--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dexie": "^2.0.4",
     "downshift": "^3.4.7",
     "enzyme-adapter-react-16": "^1.15.1",
+    "lodash": "^4.17.15",
     "logrocket": "^0.6.21",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
@@ -20,7 +21,7 @@
     "react-google-recaptcha": "^1.0.5",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.3.0",
     "react-toastify": "^5.4.1"
   },
   "scripts": {
