--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dexie": "^2.0.4",
     "downshift": "^3.4.7",
     "enzyme-adapter-react-16": "^1.15.1",
+    "filepond": "^4.9.2",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.5.0",
     "lodash": "^4.17.15",
     "logrocket": "^0.6.21",
     "mobx": "^5.15.0",
@@ -18,6 +21,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-filepond": "^7.0.1",
     "react-google-recaptcha": "^1.0.5",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
