--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "react-toastify": "^5.4.1"
+    "react-toastify": "^5.4.1",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
