--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-toastify": "^5.4.1",
+    "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
