--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.0",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
