--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "dexie": "^2.0.4",
     "downshift": "^3.4.7",
-    "enzyme-adapter-react-16": "^1.15.1",
     "filepond": "^4.9.2",
     "filepond-plugin-image-exif-orientation": "^1.0.6",
     "filepond-plugin-image-preview": "^4.5.0",
@@ -52,11 +53,18 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetTransformer.js",
+      "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+    }
+  },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "fake-indexeddb": "^2.1.1",
-    "react-hooks-testing-library": "^0.5.1",
-    "react-testing-library": "^7.0.1",
-    "sinon": "^7.5.0"
+    "@testing-library/react": "^9.4.0",
+    "chai": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "identity-obj-proxy": "^3.0.0",
+    "react-testing-library": "^7.0.1"
   }
 }
