--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.5.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
+    "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-filepond": "^7.0.1",
     "react-google-recaptcha": "^1.0.5",
     "react-paginate": "^6.3.2",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-toastify": "^5.4.1",
