--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.5.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "node-sass": "^4.13.1",
     "quill": "^1.3.7",
     "react": "^16.12.0",
