minify images and put restrictions in place for file size

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "downshift": "^3.4.7",
     "enzyme-adapter-react-16": "^1.15.1",
     "filepond": "^4.9.2",
+    "filepond-plugin-file-validate-size": "^2.2.0",
     "filepond-plugin-image-exif-orientation": "^1.0.6",
     "filepond-plugin-image-preview": "^4.5.0",
     "lodash": "^4.17.15",
