--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mobx-react-lite": "^1.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -31,7 +31,8 @@
     "react-scripts": "^3.3.0",
     "react-toastify": "^5.4.1",
     "react-twitter-embed": "^3.0.3",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "tailwindcss": "^1.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
