--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
@@ -25,7 +27,6 @@
     "react-dom": "^16.12.0",
     "react-filepond": "^7.0.1",
     "react-google-recaptcha": "^1.0.5",
-    "react-paginate": "^6.3.2",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
