--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "node-sass": "^4.14.1",
+    "postcss-cli": "^8.3.1",
     "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -29,14 +30,16 @@
     "react-toastify": "^5.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.9.0",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "now-build": "react-scripts build"
+    "now-build": "react-scripts build",
+        "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+
   },
   "eslintConfig": {
     "extends": "react-app"
