--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^4.3.1",
     "react-toastify": "^5.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.9.0",
@@ -38,8 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "now-build": "react-scripts build",
-        "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
-
+    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
